<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/llTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/Order_Details"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintTop_toBottomOf="@+id/llTop"
        tools:layout_editor_absoluteX="50dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/ic_ramen" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/ic_lunch_box" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/Items"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/Details" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="@id/llOrder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/llOrderID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/view1"
        tools:layout_editor_absoluteX="15dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:text="@string/OrderID"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:text="@string/ID"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="@id/llOrderID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/llOrderDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        tools:layout_editor_absoluteX="15dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:text="@string/OrderDate"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:text="@string/Date"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="@id/llOrderDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/llOrderPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        tools:layout_editor_absoluteX="15dp">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:text="@string/PaymentMode"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:text="@string/PHONEPE"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="@id/llOrderPayment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/llAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/view4"
        tools:layout_editor_absoluteX="15dp">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_baseline_location_on_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/Address_Type"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/Address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/Address" />

            <LinearLayout
                android:id="@+id/llInstruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Instruction" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:text="@string/Instruction_Value"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="@id/llAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.vinay.stepview.HorizontalStepView
        android:id="@+id/step_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/view5"
        tools:layout_editor_absoluteX="15dp">

    </com.vinay.stepview.HorizontalStepView>

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/State"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/step_view" />

    <LinearLayout
        android:id="@+id/llArrivalTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        tools:layout_editor_absoluteX="15dp">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Expected_Time" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Time" />
    </LinearLayout>

    <Button
        android:id="@+id/TrackOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#FFC0CB"
        android:paddingLeft="50dp"
        android:paddingTop="10dp"
        android:paddingRight="50dp"
        android:paddingBottom="10dp"
        android:text="@string/TrackOrder"
        android:textAllCaps="false"
        android:textColor="@color/teal_700"
        app:icon="@drawable/ic_baseline_location_on_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llArrivalTime" />

    <Button
        android:id="@+id/ReportIssue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:text="@string/Report_Issue"
        android:textAllCaps="false"
        android:textColor="#FFC0CB"
        android:textSize="14sp"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TrackOrder" />


</androidx.constraintlayout.widget.ConstraintLayout>